# Flint

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build_libmtp.sh
src/: device-detection.cpp  device-detection.h  main.cpp  mtp-utils.cpp  utils.cpp  utils.h
